--- a/client/app/src/main/res/layout/activity_home.xml
+++ b/client/app/src/main/res/layout/activity_home.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.main.HomeActivity">
+    tools:context=".view.main.HomeActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.camera.view.PreviewView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/camera"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/photo_ui">
+    </FrameLayout>
     <com.google.android.material.imageview.ShapeableImageView
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
         android:layout_width="50dp"
@@ -44,6 +49,29 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="70dp"
         />
-
-
+    <Button
+        android:id="@+id/recording_sign"
+        style="?android:attr/borderlessButtonStyle"
+        android:padding="0dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:drawableEnd="@drawable/ic_baseline_circle_small"
+        android:drawableTint="#ff0404"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:visibility="invisible"
+        />
+    <Button
+        android:id="@+id/stop_recording_btn"
+        style="?android:attr/borderlessButtonStyle"
+        android:padding="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableEnd="@drawable/ic_baseline_stop_24"
+        android:drawableTint="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="78dp"
+        android:visibility="invisible"
+        />
 </RelativeLayout>
