--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_low_opa">#8CFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="purple">#9152FF</color>
     <color name="error_red">#FF3D3D</color>
